<resources>

    <string name="app_name">SpeedRecorder</string>
    
	<string name="title">设备信息</string>
	<string name="add_favorite">收藏当前位置</string>
	<string name="app_info">详细信息</string>
	<string name="query_speeds">查询最近一天记录</string>
	<string name="query_speeds_hour">查询最近一小时记录</string>
	<string name="location_change_error">再次获取GPS信息超时，重置速度%1$.2f</string>
	<string name="start_time">选择时间</string>
	<string name="speed_title">速度:</string>
	<string name="speed_km_unit">千米/时</string>
	<string name="position_title">位置：</string>
	<string name="blank">空</string>
	<string name="long_title">经度：</string>
	<string name="lan_title">纬度：</string>
	<string name="time_title">时间：</string>
	<string name="export_db">导出数据库文件</string>
	<string name="export_db_ok">导出数据库文件成功</string>
	<string name="exit">完全退出</string>
	<string name="header_time">时间</string>
	<string name="header_speed">速度</string>
	<string name="select_date">选择日期:</string>
	<string name="select_start_time">开始时间:</string>
	<string name="select_end_time">结束时间:</string>
	<string name="query">查询</string>
	<string name="select_time_error">开始时间晚于结束时间，请重新选择时间</string>
	<string name="notification_title">速度记录者</string>
	<string name="notification_content">努力记录速度中...</string>
</resources>
